--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@heroicons/react": "^2.2.0",
+    "@types/uuid": "^10.0.0",
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.8.1",
     "cheerio": "^1.0.0",
@@ -32,7 +33,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
-    "styled-jsx": "^5.1.6"
+    "styled-jsx": "^5.1.6",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
