--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"PORT=3001 node server/main.js\" \"vite\"",
+    "dev": "concurrently \"NODE_ENV=development PORT=3001 node server/main.js\" \"vite\"",
     "build": "vite build",
     "preview": "vite preview",
     "proxy": "node server/proxy.js",
@@ -33,7 +33,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "rehype-sanitize": "^6.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
