--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "faiss-node": "^0.5.1",
     "http-proxy-middleware": "^2.0.6",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
